cambie el nombre de un miembro del equipo

--- a/src/pug/mains/main-inicio.pug
+++ b/src/pug/mains/main-inicio.pug
@@ -27,7 +27,7 @@ main.Main#Main
           .Figure-img
             img(src="img/perfil-1.jpg", alt="Juanito Perez")
           .Figure-name
-            h3 Juanito perez
+            h3 Esteban Dido
           .Figure-description
             p Duis cursus tellus non euismod porttitor. Sed eu posuere est. Pellentesque quis erat sapien. Integer cursus gravida risus rhoncus malesuada. Duis posuere auctor finibus. Nam enim felis, convallis in vehicula a, consectetur vel mauris. Donec nulla leo, malesuada ac laoreet id, congue non augue.
         .Figure
